--- a/index.html
+++ b/index.html
@@ -127,6 +127,33 @@
 
         const { useState, useEffect } = React;
 
+        // 🔐 ADMIN PROTECTION - ADD THIS SECTION
+        const checkAdminAccess = () => {
+            const savedAuth = localStorage.getItem('surgical_admin_auth');
+            if (savedAuth === 'Ammarsameer_authenticated') {
+                return true;
+            }
+            
+            const username = prompt('Username:');
+            const password = prompt('Password:');
+            
+            if (username === 'Ammarsameer' && password === 'ghaydaa1') {
+                localStorage.setItem('surgical_admin_auth', 'Ammarsameer_authenticated');
+                alert('✅ Welcome, Admin! You have full access.');
+                return true;
+            } else {
+                alert('❌ Access Denied!');
+                document.body.innerHTML = '<div style="text-align:center;padding:50px;font-family:Arial;"><h1 style="color:#dc2626;">🔒 Access Denied</h1><p>Contact administrator for access.</p><button onclick="location.reload()" style="margin-top:20px;padding:10px 20px;background:#3b82f6;color:white;border:none;border-radius:5px;cursor:pointer;">Try Again</button></div>';
+                return false;
+            }
+        };
+
+        // Check access on page load
+        if (!checkAdminAccess()) {
+            return; // Stop loading if access denied
+        }
+        // END ADMIN PROTECTION 🔐
+
         // Comprehensive icon set
         const Plus = ({ className = "w-4 h-4" }) => <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 4v16m8-8H4"></path></svg>;
         const User = ({ className = "w-4 h-4" }) => <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>;
