--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                             <div><strong>Name:</strong> ${patient.name}</div>
                             <div><strong>MRN:</strong> ${patient.mrn}</div>
                             <div><strong>Age:</strong> ${patient.age}</div>
-                            <div><strong>DOB:</strong> ${patient.demographics.dob}​​​​​​​​​​​​​​​​<div>
+                            <div><strong>DOB:</strong> ${patient.demographics.dob}​​​​​​​​​​​​​​​​</div>
                             <div><strong>Weight:</strong> ${patient.demographics.weight} kg</div>
                             <div><strong>Surgery Date:</strong> ${patient.surgeryDate}</div>
                         </div>
