--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@ alert(‘❌ Error changing password. Please try again.’);
                 </div>
             );
         };
-
+          ReactDOM.createRoot(document.getElementById('root')).render(<SurgicalPatientManager />);
         // ADMIN DASHBOARD COMPONENT
         const AdminDashboard = () => {
             return (
