--- a/index.html
+++ b/index.html
@@ -11976,4 +11976,7 @@ Notification.requestPermission();
             console.log('🚀 Surgical Patient Manager v2.0.0');
             console.log('📱 Development mode active');
             console.log('🔧 Debug functions available at window.debugApp');
-        }
+        });
+        </script>
+    </body>
+</html>
