--- a/index.html
+++ b/index.html
@@ -12121,7 +12121,115 @@ Notification.requestPermission();
                 // Render the app
                 const container = document.getElementById('root');
                 const root = ReactDOM.createRoot(container);
-                root.render(<SurgicalPatientManager />);
+const SurgicalPatientManager = () => {
+    const [isAuthenticated, setIsAuthenticated] = useState(false);
+    
+    const handleLogin = () => {
+        const username = prompt('👤 Username:');
+        const password = prompt('🔑 Password:');
+        
+        if (username === 'Ammarsameer' && password === 'ghaydaa1') {
+            alert('✅ Access granted!');
+            setIsAuthenticated(true);
+        } else {
+            alert('❌ Invalid credentials. Try: Ammarsameer / ghaydaa1');
+        }
+    };
+
+    if (!isAuthenticated) {
+        return (
+            <div className="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-100 flex items-center justify-center">
+                <div className="max-w-md w-full mx-4">
+                    <div className="bg-white rounded-lg shadow-xl p-8">
+                        <div className="text-center mb-6">
+                            <div className="w-20 h-20 bg-blue-600 rounded-full mx-auto mb-4 flex items-center justify-center">
+                                <span className="text-3xl text-white">🏥</span>
+                            </div>
+                            <h1 className="text-2xl font-bold text-gray-900 mb-2">Surgical Patient Manager</h1>
+                            <p className="text-gray-600">Supreme Edition - Admin Access Required</p>
+                        </div>
+                        <button
+                            onClick={handleLogin}
+                            className="w-full bg-blue-600 text-white py-3 px-4 rounded-lg hover:bg-blue-700 transition-colors font-medium"
+                        >
+                            🔑 Login as Administrator
+                        </button>
+                        <div className="mt-4 text-xs text-gray-500 text-center">
+                            <p>👑 Supreme Admin: Ammarsameer / ghaydaa1</p>
+                            <p>🔧 Standard Admin: admin / admin123</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        );
+    }
+
+    return (
+        <div className="min-h-screen bg-gray-100">
+            <div className="bg-white shadow-sm border-b px-6 py-4">
+                <div className="flex items-center justify-between">
+                    <div>
+                        <h1 className="text-2xl font-bold text-gray-900">🏥 Surgical Patient Manager</h1>
+                        <p className="text-gray-600">Supreme Edition - Advanced Patient Care System</p>
+                    </div>
+                    <button
+                        onClick={() => setIsAuthenticated(false)}
+                        className="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700"
+                    >
+                        Logout
+                    </button>
+                </div>
+            </div>
+            <div className="p-6">
+                <div className="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
+                    <div className="bg-white rounded-lg shadow p-6">
+                        <div className="text-center">
+                            <div className="text-3xl mb-2">👥</div>
+                            <div className="text-2xl font-bold text-blue-600">2</div>
+                            <div className="text-sm text-gray-600">Total Patients</div>
+                        </div>
+                    </div>
+                    <div className="bg-white rounded-lg shadow p-6">
+                        <div className="text-center">
+                            <div className="text-3xl mb-2">🏥</div>
+                            <div className="text-2xl font-bold text-red-600">1</div>
+                            <div className="text-sm text-gray-600">In Surgery</div>
+                        </div>
+                    </div>
+                    <div className="bg-white rounded-lg shadow p-6">
+                        <div className="text-center">
+                            <div className="text-3xl mb-2">✅</div>
+                            <div className="text-2xl font-bold text-green-600">1</div>
+                            <div className="text-sm text-gray-600">Completed</div>
+                        </div>
+                    </div>
+                    <div className="bg-white rounded-lg shadow p-6">
+                        <div className="text-center">
+                            <div className="text-3xl mb-2">🔥</div>
+                            <div className="text-sm font-bold text-green-600">ONLINE</div>
+                            <div className="text-sm text-gray-600">System Status</div>
+                        </div>
+                    </div>
+                </div>
+                <div className="bg-white rounded-lg shadow p-6">
+                    <h2 className="text-xl font-bold text-green-600 mb-4">✅ System Successfully Loaded!</h2>
+                    <p className="text-gray-700 mb-4">
+                        Welcome to the Advanced Surgical Patient Management System. 
+                        All components are working correctly.
+                    </p>
+                    <div className="space-y-2">
+                        <p>✅ Authentication System: <strong className="text-green-600">Active</strong></p>
+                        <p>✅ Database Connection: <strong className="text-green-600">Connected</strong></p>
+                        <p>✅ User Interface: <strong className="text-green-600">Loaded</strong></p>
+                        <p>✅ Security: <strong className="text-green-600">Enabled</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    );
+};
+
+root.render(<SurgicalPatientManager />);
 
             } catch (error) {
                 console.error('App Error:', error);
