--- a/index.html
+++ b/index.html
@@ -12121,6 +12121,7 @@ Notification.requestPermission();
                 // Render the app
                 const container = document.getElementById('root');
                 const root = ReactDOM.createRoot(container);
+// Simple Test Component
 const SurgicalPatientManager = () => {
     const [isAuthenticated, setIsAuthenticated] = useState(false);
     
